Fixed horizontal scrollling weirdness. Added click functions (not complete.)

--- a/parallel.css
+++ b/parallel.css
@@ -41,3 +41,7 @@ svg {
 .parallelAxis text {
     text-shadow: 0 1px 0 #fff;
 }
+
+.tableClicked {
+    background-color: #f5f5f5;
+}
